# Visual-Circuit-Designer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  circuit.json  cocotbRunner.py  cocotbTest.py  connect.py  docker-compose.yml  input_data.json  nginx.conf  package-lock.json  package.json  pytest.ini  requirements.txt  tempRunner.py  test.py  verilog_generator.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: AC_template.md  BUG_REPORT.md  config.yml  technical_task.md
.github/workflows/: docker.yml  frontend_tests.yml  (+4 more)
RunnerNode/: Dockerfile  Makefile  circuitSample.json  cocotbTest.py  connect.py  input_data.json  requirements.txt  verilogGenerator.py
UI/: Dockerfile  index.html  jest.config.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
VCD Frontend/: index.html  package-lock.json  package.json
auth/: .clang-format  CMakeLists.txt  Dockerfile  default.nix  shell.nix
auth/src/: app.cpp  app.hpp  main.cpp
auth/src/api/: AuthRequestHandlerFactory.cpp  AuthRequestHandlerFactory.hpp  DBConnector.cpp  DBConnector.hpp  PasswordHasher.cpp  PasswordHasher.hpp  TokenManager.cpp  TokenManager.hpp  User.cpp  User.hpp  UserCredentials.hpp
auth/src/api/handlers/: LoginHandler.cpp  LoginHandler.hpp  NotFoundHandler.cpp  NotFoundHandler.hpp  RefreshHandler.cpp  RefreshHandler.hpp  RegistrationHandler.cpp  RegistrationHandler.hpp  VerificationHandler.cpp  VerificationHandler.hpp
backend/: Dockerfile  auth.py  db.py  requirements.txt  test.py
postgres-init/: 1-users.sql  2-projects.sql  users.sql
(+323 files in other folders)
